<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/colorDark"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".activities.SettingsActivity">

    <EditText
        android:id="@+id/school_class"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/shortage_hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:maxLength="4"
        android:maxLines="1"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:backgroundTint="@android:color/white"/>

    <EditText
        android:id="@+id/notification_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/notification_username"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:backgroundTint="@android:color/white"/>

    <EditText
        android:id="@+id/notification_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/notification_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:backgroundTint="@android:color/white"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/notifications_hint"
        android:textAlignment="center"
        android:textColor="@android:color/white" />


    <CheckBox
        android:id="@+id/notifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/receive_notifications"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:backgroundTint="@android:color/white"
        android:buttonTint="@android:color/white"/>

    <Button
        android:id="@+id/time_picker"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/choose_time"
        android:textStyle="bold"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/confirm_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/button_save_settings"
        android:textStyle="bold"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@android:color/white" />
</LinearLayout>