<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDark"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".activities.LoginActivity">

    <!-- LoginActivity progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginTop="15sp"
                app:srcCompat="@drawable/baseline_calendar_today_white_48" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:layout_marginBottom="5sp"
                android:text="@string/BTR"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="30sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#CB7289DA">

                <AutoCompleteTextView
                    android:id="@+id/user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#7289DA"
                    android:hint="@string/prompt_username"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textColorLink="#14FFFFFF" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#CB7289DA">

                <AutoCompleteTextView
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#7289DA"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@android:color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/user_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/action_sign_in"
                android:textColor="@android:color/white"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:orientation="horizontal"
                android:weightSum="1.0"
                android:layout_marginTop="30dp">

                <ImageView
                    android:id="@+id/fingerprint_use"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:layout_width="0dip"
                    android:adjustViewBounds="true"
                    android:maxWidth="48dp"
                    android:maxHeight="48dp"
                    android:layout_gravity="start"
                    android:src="@drawable/baseline_fingerprint_white_48" />

                <ImageView
                    android:id="@+id/fingerprint_set"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:layout_width="0dip"
                    android:adjustViewBounds="true"
                    android:maxWidth="48dp"
                    android:maxHeight="48dp"
                    android:layout_gravity="end"
                    android:src="@drawable/baseline_fingerprint_white_48" />
            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:orientation="horizontal"
                android:weightSum="1.0"
                android:layout_marginTop="5dp">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:layout_width="0dip"
                    android:text="@string/fingerprint_sign_in"
                    android:textColor="@android:color/white"
                    android:textAlignment="center"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:layout_width="0dip"
                    android:text="@string/fingerprint_register"
                    android:textColor="@android:color/white"
                    android:textAlignment="center"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="60dp"
                android:text="@string/no_warranty_hint"
                android:textAlignment="center"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>